--- a/src/components/alg/alg-cf/yargu1/pages/elem-sp28.html
+++ b/src/components/alg/alg-cf/yargu1/pages/elem-sp28.html
@@ -176,9 +176,27 @@ double cross(point A, point B) {
   return A.x * B.y - A.y * B.x;
 }
 </pre>
+  <p>Функцию cross можно посчитать и как определитель матрицы 2 x 2</p>
+<pre>
+|  A.x  B.x  |
+|  A.y  B.y  |
 
+определитель = A.x * B.y - A.y * B.x
+</pre>
+
+  <h4>Задача</h4>
+  <p>Определить, являются ли вектора перпендикулярны друг другу. Для этого нужно проверить, что их скалярное произведение равно 0.</p>
+
+  <h4>Полярные координаты</h4>
+  <p>В евклидовом пространстве есть ось x и ось y. Для опрделения координаты точки нужно опустить перпендикуляры к этим осям.</p>
+  <p>Полярная координа имеет два параметра - расстояние до начала координат и угол поворота от оси x.</p>
+  <p>Все что связано с вращением, удобно описывать с помощью полярных координат.</p>
+
+  <h4>Нормирование</h4>
   <p>Операция нормирование вектора - это изменение длины вектора до длины равной 1 (его уменьшение или сжатие на нужную величину) new_a = a / |a| .</p>
+  <code>point N = A * (1 / sqrt(dist2(A)) );</code>
 
+  <h4>Поворот вектора</h4>
   <p>Операция поворот вектора на угол Θ против часовой стрелки:</p>
 <pre>
 new_a = (cos(Θ) -sin(Θ)) (x)
@@ -196,9 +214,15 @@ new_a = ( cos(Θ) sin(Θ)) (x)
         (-sin(Θ) cos(Θ)) (y)
 </pre>
 
+  <p>Если нужно повернуть вектор против по часовой стрелки, подставим -Θ:</p>
+<pre>
+new_a = ( cos(-Θ) sin(-Θ)) (x)
+        (-sin(-Θ) cos(-Θ)) (y)
+</pre>
+
   <h4>Треугольник</h4>
 
-  <p>В задачах по спортивному программированию сложные фигуры в том числе и  треугольники будут задаваться при помощи набора точек. Какими способами можно найти площадь треугольника?</p>
+  <p>В задачах по спортивному программированию сложные фигуры в том числе и треугольники будут задаваться при помощи набора точек. Какими способами можно найти площадь треугольника?</p>
 
   <p>Площадь треугольника:</p>
   <ol>
@@ -220,39 +244,65 @@ new_a = ( cos(Θ) sin(Θ)) (x)
   </ol>
 
   <p>Медиана треугольника — это отрезок, соединяющий вершину треугольника с серединой противоположной стороны.</p>
+  <p>Пусть есть треугольник ABC. Пусть точка D это середина стороны AC. Тогда длина отрезка BD это и есть медиана.</p>
   <p>Биссектриса треугольника — отрезок биссектрисы угла, проведённый из вершины треугольника к противолежащей стороне и делящий этот угол пополам.</p>
   <p>Высота треугольника — это перпендикуляр, проведённый из вершины треугольника к прямой, содержащей противоположную сторону.</p>
+  <p>Пусть есть треугольник ABC. s - это его площадь. AC - это длина стороны к которой проведена высота. Тогда саму высоту можно найти по формуле</p>
+  <code>h = (s / AC) * 2;</code>
 
   <h4>Прямая</h4>
 
+  <p>Школьное уравнение прямой нам не подходит, потому что оно описывает только те прямые, что пересекают ось Y.</p>
+  <code>y = k*x + b;</code>
+
   <p>Общее уравнение прямой линии на плоскости в декартовых координатах:</p>
-  <code>Ax + By + C = 0.</code>
+  <code>Ax + By + C = 0</code>
 
   <p>Так же это уравнение называют нормальным уравнением прямой, так как по коэффициентам A, B определяется вектор нормали (A,B). Вектор нормали - это вектор, который перпендикулярен прямой.</p>
-  <p>В задачах чаще всего прямые задаются по двум точкам через каноническое уравнение прямой.</p>
+  <p>В задачах чаще всего прямые задаются по двум точкам.</p>
+  <p>Школьное (каноническое) уравнение прямой по двум точкам нам также не подходит, потому что есть операция деления</p>
   <code>(x - x1) / (x2 - x1) = (y - y1) / (y2 - y1).</code>
 
-  <p>При решении задач с прямыми всегда необходимо переводить из канонического вида в нормальный вид прямой.</p>
+  <p>При решении задач с прямыми всегда необходимо переводить из канонического вида в нормальный вид прямой. Для этого умножаем обе части уравнения на знаменатели, раскрываем скобки и приходим к нормальному уравнению прямой.</p>
+  <code>(y2-y1)*(x-x1) = (x2-x1)*(y-y1)</code>
+  <code>(y2-y1)*(x-x1) - (x2-x1)*(y-y1) = 0</code>
+  <code>(y2-y1)*x - (y2-y1)*x1 - (x2-x1)*y + (x2-x1)*y1 = 0</code>
+  <code>A = y2-y1, B = x1-x2, C = y1*x2-y2*x1</code>
+  <code>Ax + By + C = 0</code>
 
-  <p>Проверка принадлежности точки прямой. Первая формула верна математически, но она совсем не подходит для программирования. В программировании используют вторую формулу, где определяют с некоторой погрешностью ε.</p>
+  <h4>Проверка принадлежности точки прямой</h4>
+  <p>Первая формула верна математически, но она совсем не подходит для программирования. В программировании используют вторую формулу, где определяют с некоторой погрешностью ε.</p>
   <code>A * px + B * py + C = 0.</code>
-  <code>|A * px + B * py + C| &lt; ε.</code>
+  <code>|A * px + B * py + C| &lt; ε</code>
 
-  <p>Проверка что прямые параллельны. Первая формула не подходит из-за возможного деления на ноль. Надо использовать вторую формулу.</p>
+  <h4>Проверка что две точки лежат в одной полуплоскости относительно заданной прямой</h4>
+  <p>Если подставить точки в уравнение прямой, они должны быть с одним знаком. Что означает, что прямая должна сдвигаться в одном направлении, чтобы пройти через эти точки. Если бы прямая сдвигалась в разных направлениях, чтобы пройти через эти точки, то точки лежат в разных полуплоскостях относительно этой прямой.</p>
+
+  <h4>Вектор нормали</h4>
+  <p>Вектор нормали прямой это перпендикуляр, опущенный на прямую. Зная нормальное уравнение прямой, можно найти вектор нормали прямой. Координаты вектора нормали это коэффициенты A и B из уравнения прямой. Чтобы найти вектор нормали в другом направлении, нужно изменить знак коэффициентов A и B.</p>
+
+  <h4>Проверка что прямые параллельны</h4>
+  <p>Есть две прямые, представленные нормальными уравнениями</p>
+  <code>A1*x + B1*y + C1= 0</code>
+  <code>A2*x + B2*y + C2= 0</code>
+  <p>Две прямые параллельны если их векторы нормали колинеарны, то есть коэффициенты A и B пропорциональны.</p>
   <code>A1 / A2 == B1 / B2</code>
-  <code>A1 * B2 == B1 * A2.</code>
+  <p>Первая формула не подходит из-за возможного деления на ноль. Надо использовать вторую формулу.</p>
+  <code>A1 * B2 == B1 * A2</code>
 
   <p>Точка пересечения двух прямых. Чтобы найти точку с координатами (x, y) пересечения двух прямых, нужно решить систему из двух уравнений.</p>
   <code>A1x + B1y + C1 = 0</code>
-  <code>A2x + B2y + C2 = 0.</code>
+  <code>A2x + B2y + C2 = 0</code>
 
-  <p>Расстояние от точки до прямой.</p>
+  <h4>Расстояние от точки до прямой.</h4>
+  <p>Дана прямая, заданная уравнением A*x + B*y + C = 0. Дана точка p, заданная координатами p.x и p.y</p>
   <p>Есть несколько вариантов решения этой задачи.</p>
   <ol>
-    <li>Найти формулу для нахождения расстояния или вывести самостоятельно.</li>
+    <li>Найти формулу для нахождения расстояния или вывести самостоятельно.
+      <code>abs (A*p.x + B*p.y + C) / sqrt(A*A + B*B)</code>
+    </li>
     <li>Построить перпендикулярную прямую, проходящую через точку A.</li>
-    <li>Найти две точки на прямой a, построить треугольник и в нем найти высоту,
-опущенную на прямую.</li>
+    <li>Найти две точки на прямой a, построить треугольник и в нем найти высоту, опущенную на прямую.</li>
   </ol>
 
   <h4>Площадь фигуры</h4>
@@ -261,6 +311,13 @@ new_a = ( cos(Θ) sin(Θ)) (x)
 
   <p>Во-первых, можно разбить многоугольник на треугольники и посчитать сумму их площадей. Но это очень трудная задача, потому что трудно определить по трем точкам, что треугольник внутри многоугольника, а не снаружи.</p>
   <p>Воспользуемся метод трапеций (интегрирование). Площадь трапеции это   полу сумма оснований на высоту. За высоту возьмем разность координат x   соседних вершин основание значение y. При проходе по списку вершин   учитываем направление по оси x, от нее зависит знак площади трапеции.</p>
+
+  <h4>Плоскость</h4>
+  <p>Нормальное уравнение плоскости отличается от нормального уравнения прямой, только еще одной координатой</p>
+  <code>Ax + By + Cz + D = 0</code>
+
+  <h4>Вектор нормали</h4>
+  <p>Вектор нормали плоскости это перпендикуляр, опущенный на плоскость. Зная нормальное уравнение плоскости, можно найти вектор нормали плоскости. Координаты вектора нормали это коэффициенты A, B и C из уравнения плоскости.</p>
 </article>
 
 
@@ -348,6 +405,14 @@ int main() {
     <summary>Пример</summary>
     <code>2 1 3 5</code>
     <code>0.56673</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Первый вариант. Определяем в какой четверти находится точка и выразить угол через арксинус или арккосинус.</p>
+    <p>Второй вариант. Более простой. Использовать арктангенс. Функция <strong>atan2</strong> библиотеки <strong>cmath</strong> возвращает угол от -pi до pi [-pi, pi). При этом не нужно рассматривать каждую четверть по отдельности. Для решения нужно вычислить значение выражения</p>
+    <code>atan2(cross(A, point(1,0)), dot(A, point(1,0))</code>
+    <p>Если ответ получисля отрицательным, то к нему нужно прибавить pi.</p>
   </details>
 </article>
 
