--- a/src/components/alg/alg-cf/yargu2/pages/elem-sp24.html
+++ b/src/components/alg/alg-cf/yargu2/pages/elem-sp24.html
@@ -169,5 +169,26 @@ double dist2(point A) {
   <p>Дан вектор AB. Как найти его середину C?</p>
   <p>Мы определили операторы и можем ими воспользоваться</p>
   <code>C = (A + B) * 0.5;</code>
+
+  <h4>Скалярное произведение</h4>
+  <p>Скалярное произведение это проекция одного вектора на другой. В математике его вычисляют как произведение модулей на косинус угла между ними.</p>
+  <code>(a, b) = |a| * |b| * cos(t)</code>
+  <p>Угол можно выразить через арккосинус, но это не очень удобно и приводит к потере точности.</p>
+  <p>В спортивном программировании его вычисляют как сумму попарных произведений координат.</p>
+  <code>(a, b) = a.x * b.x + a.y * b.y</code>
+  <p>Для вычисления скалярного произведения пишут функцию <strong>dot</strong>. Причина такого названия это использование в литературе символа точка</p>
+  <code>a ∙ b</code>
+
+  <h4>Векторное произведение</h4>
+  <p>В математике векторное произведение вычисляют как произведение модулей на синус угла между ними.</p>
+  <code>[a, b] = |a| * |b| * sin(t)</code>
+  <p>Здесь t это угол поворота вектора a к вектору b по часовой стрелке. Если угол t больше 180 градусов, то векторное произведение получается отрицательным.</p>
+  <p>Угол можно выразить через арксинус, но это не очень удобно и приводит к потере точности.</p>
+  <p>В спортивном программировании его вычисляют как</p>
+  <code>[a, b] = a.x * b.y - a.y * b.x</code>
+  <p>Для вычисления скалярного произведения пишут функцию <strong>cross</strong>. Причина такого названия это использование в литературе символа крестик</p>
+  <code>a x b</code></p>
+
+
 </article>
 
