--- a/src/components/alg/alg-conspect/alg-books/pages/elem-book-alg-1.html
+++ b/src/components/alg/alg-conspect/alg-books/pages/elem-book-alg-1.html
@@ -55,12 +55,12 @@ end.
 
   <h4>Вывод данных</h4>
 
-  <p>Для вывода информации служат стандартные процедуры <strong>write()</strong> и <strong>writeln()</strong>. В скобках через запятую перечисляются параметры, которые нужно вывести. Число параметров не ограничено. В качестве параметров могут быть константы, переменные, выражения.</p>
-  <p>Единственное отличие между процедурами write и writeln: после вызова процедуры write курсор остается на той же строке, после вызова процедуры writeln курсор переходит на новую строку.</p>
-  <p>Строковая константа пишется в одинарных кавычках. Если нужно напечатать кавычку, то нужно написать две кавычки подряд</p>
+  <p>Для вывода информации служат стандартные процедуры <strong>write()</strong> и <strong>writeln()</strong>. В скобках через запятую перечисляются параметры, которые нужно вывести. Число параметров не ограничено. В качестве параметров могут быть <strong>константы, переменные, выражения</strong>.</p>
+  <p>Единственное отличие между процедурами <strong>write</strong> и <strong>writeln</strong>: после вызова процедуры <strong>write</strong> курсор остается на той же строке, после вызова процедуры <strong>writeln</strong> курсор переходит на новую строку.</p>
+  <p><strong>Строковая константа</strong> пишется в одинарных кавычках. Если нужно напечатать кавычку, то нужно написать две кавычки подряд</p>
   <code>write('Hello ', 'World ', 'O''key')</code>
   <code>Hello World O'key</code>
-  <p>Числовые константы пишутся без кавычек. При печати параметров, пробелы между ними автоматически не вставляются</p>
+  <p><strong>Числовые константы</strong> пишутся без кавычек. При печати параметров, пробелы между ними автоматически не вставляются</p>
   <code>write(1, 2, 3)</code>
   <code>123</code>
   <p>Чтобы они разделялись пробелом можно добавить символы пробела или отформатировать печать.</p>
@@ -126,7 +126,7 @@ writeln(' *  **  ****   *   *   *   *');
   <p>Арифметические операции с целыми числами : +, -, *, div, mod.</p>
   <p>div - деление нацело, дробная чать просто отбрасывается</p>
   <p>mod - остаток от деления нацело</p>
-  <code>a mod a = a - ((a div b) * b)</code>
+  <code>a mod b = a - ((a div b) * b)</code>
 
   <h4>Вещественные чила</h4>
   <p>Тип <strong>real</strong></p>
@@ -138,8 +138,8 @@ writeln(' *  **  ****   *   *   *   *');
 
   <p>Для ввода информации служат стандартные процедуры <strong>read()</strong> и <strong>readln()</strong>. В скобках через запятую перечисляются имена переменных, которые нужно ввести. Число переменных не ограничено.</p>
   <p></p>Выполнение программы будет приостановлено, до тех пор пока пользователь не введет соответствующее количество значений. Чтобы ввести несколько переменных, они должны отделяться пробелом или переводом строки. После ввода последнего значения нужно нажать Enter, чтобы все значения записались в переменные.
-  <p>Единственное отличие между процедурами read и readln: после вызова процедуры read курсор остается на той же строке, после вызова процедуры readln курсор переходит на новую строку.</p>
-  <p>После нажатия клавиши Enter курсор в любом случае переходит на новую строку, поэтому разницу между операторами read и readln заметить невозможно.</p>
+  <p>Единственное отличие между процедурами <strong>read</strong> и <strong>readln</strong>: после вызова процедуры <strong>read</strong> курсор остается на той же строке, после вызова процедуры <strong>readln</strong> курсор переходит на новую строку.</p>
+  <p>После нажатия клавиши Enter курсор в любом случае переходит на новую строку, поэтому разницу между операторами <strong>read</strong> и <strong>readln</strong> заметить невозможно.</p>
 
   <details>
     <summary>Задания</summary>
@@ -222,10 +222,13 @@ end.
   <details>
     <summary>Задачи</summary>
 
+    <h4>Задача 1</h4>
     <p>1. По введеному числу выдать сумму его цифр. На вход подается целое число k (0 ≤ k ≤ 9999)</p>
     <p>Пример</p>
     <code>2008</code>
     <code>10</code>
+
+    <h4>Решение</h4>
   </details>
 </article>
 
