--- a/src/components/alg/alg-cf/spbgu/pages/elem-spbgu2.html
+++ b/src/components/alg/alg-cf/spbgu/pages/elem-spbgu2.html
@@ -4,8 +4,8 @@
 
 
 <article class="article">
-  <h1>2 2012-2013 C3 Язык C++</h1>
-  <p><a href="https://codeforces.com/group/U69t0Qb9kU/contest/100092" target="_blank">Codeforces Контест 100092</a></p>
+  <h1>2 2012-2013 B2 Поиск в глубину 2012.09.15</h1>
+  <p><a href="https://codeforces.com/gym/100070" target="_blank">Codeforces Контест 100070</a></p>
 </article>
 
 
@@ -13,20 +13,18 @@
 <article class="article">
   <h2>Содержание</h2>
 
-      <a href="#t1">Задача A. Сумма двух</a>
-  <br><a href="#t2">Задача B. Произведение двух</a>
-  <br><a href="#t3">Задача C. Сумма двух наоборот</a>
-  <br><a href="#t4">Задача D. Наибольший общий делитель</a>
-  <br><a href="#t5">Задача E. Число Фибоначчи</a>
-  <br><a href="#t6">Задача F. Скейтборд</a>
-  <br><a href="#t7">Задача G. Два числа</a>
-  <br><a href="#t8">Задача H. Симпозиум</a>
+      <a href="#t1">Задача A. Предок</a>
+  <br><a href="#t2">Задача B. Поиск цикла</a>
+  <br><a href="#t3">Задача C. Мосты</a>
+  <br><a href="#t4">Задача D. Точки сочленения</a>
+  <br><a href="#t5">Задача E. Противопожарная безопасность</a>
+  <br><a href="#t6">Задача F. Конденсация графа</a>
 </article>
 
 
-<!-- Задача A. Сумма двух -->
+<!-- Задача A. Предок -->
 <article class="article">
   <div class="anchor" id="t1"></div>
-  <h3>Задача A. Сумма двух</h3>
+  <h3>Задача A. Предок</h3>
 
 </article>
