--- a/src/components/alg/alg-cf/spbgu/pages/elem-spbgu3.html
+++ b/src/components/alg/alg-cf/spbgu/pages/elem-spbgu3.html
@@ -4,8 +4,8 @@
 
 
 <article class="article">
-  <h1>3 2012-2013 C4 Структуры данных 2</h1>
-  <p><a href="https://codeforces.com/group/U69t0Qb9kU/contest/100101" target="_blank">Codeforces Контест 100101</a></p>
+  <h1>3 2012-2013 C2 Комбинаторика 1</h1>
+  <p><a href="https://codeforces.com/gym/100086" target="_blank">Codeforces Контест 100086</a></p>
 </article>
 
 
@@ -13,15 +13,18 @@
 <article class="article">
   <h2>Содержание</h2>
 
-      <a href="#t1">Задача A. Сумма простая</a>
-  <br><a href="#t2">Задача B. Минимум и максимум</a>
-  <br><a href="#t3">Задача C. Простая сортировка</a>
+      <a href="#t1">Задача A. Перестановки</a>
+  <br><a href="#t2">Задача B. Обратная перестановка</a>
+  <br><a href="#t3">Задача C. Следующая перестановка</a>
+  <br><a href="#t4">Задача D. Сочетания</a>
+  <br><a href="#t5">Задача E. Поколение комбинаторов</a>
+  <br><a href="#t6">Задача F. Сочетание</a>
 </article>
 
 
-<!-- Задача A. Сумма простая -->
+<!-- Задача A. Перестановки -->
 <article class="article">
   <div class="anchor" id="t1"></div>
-  <h3>Задача A. Сумма простая</h3>
+  <h3>Задача A. Перестановки</h3>
 
 </article>
