--- a/src/components/alg/alg-cf/spbgu/pages/elem-spbgu4.html
+++ b/src/components/alg/alg-cf/spbgu/pages/elem-spbgu4.html
@@ -4,8 +4,8 @@
 
 
 <article class="article">
-  <h1>4 2012-2013 C5 Динамическое программирование</h1>
-  <p><a href="https://codeforces.com/group/U69t0Qb9kU/contest/100135" target="_blank">Codeforces Контест 100135</a></p>
+  <h1>4 2012-2013 B3 СНМ, минимальный остов 2012.09.25</h1>
+  <p><a href="https://codeforces.com/gym/100088" target="_blank">Codeforces Контест 100088</a></p>
 </article>
 
 
@@ -13,23 +13,14 @@
 <article class="article">
   <h2>Содержание</h2>
 
-      <a href="#t1">Задача A. Лестница</a>
-  <br><a href="#t2">Задача B. Зайчик</a>
-  <br><a href="#t3">Задача C. Ход конём</a>
-  <br><a href="#t4">Задача D. Стоимость маршрута</a>
-  <br><a href="#t5">Задача E. Спуск с горы</a>
-  <br><a href="#t6">Задача F. Ядра</a>
-  <br><a href="#t7">Задача G. Longpath. Дальнейший путь</a>
-  <br><a href="#t8">Задача H. Мирные множества</a>
-  <br><a href="#t9">Задача I. Рюкзак</a>
-  <br><a href="#t10">Задача J. Плохая подстрока</a>
-  <br><a href="#t11">Задача K. Joseph Problem</a>
+      <a href="#t1">Задача A. День объединения</a>
+  <br><a href="#t2">Задача B. Пчелы</a>
 </article>
 
 
-<!-- Задача A. Лестница -->
+<!-- Задача A. День объединения -->
 <article class="article">
   <div class="anchor" id="t1"></div>
-  <h3>Задача A. Лестница</h3>
+  <h3>Задача A. День объединения</h3>
 
 </article>
