--- a/src/components/alg/alg-cf/spbgu/pages/elem-spbgu7.html
+++ b/src/components/alg/alg-cf/spbgu/pages/elem-spbgu7.html
@@ -4,8 +4,8 @@
 
 
 <article class="article">
-  <h1>7 2012-2013 C9 Геометрия. Продолжение</h1>
-  <p><a href="https://codeforces.com/group/U69t0Qb9kU/contest/100173" target="_blank">Codeforces Контест 100173</a></p>
+  <h1>7 2012-2013 B5 дерево отрезков</h1>
+  <p><a href="https://codeforces.com/gym/100093" target="_blank">Codeforces Контест 100093</a></p>
 </article>
 
 
@@ -13,17 +13,18 @@
 <article class="article">
   <h2>Содержание</h2>
 
-      <a href="#t1">Задача A. Выпуклая оболочка</a>
-  <br><a href="#t2">Задача B. Периметр выпуклой оболочки</a>
-  <br><a href="#t3">Задача C. Две окружности</a>
-  <br><a href="#t4">Задача D. Не курить!</a>
-  <br><a href="#t5">Задача E. Касательная окружности</a>
+      <a href="#t1">Задача A. Наивный RMQ</a>
+  <br><a href="#t2">Задача B. Запрос изменения на отрезке</a>
+  <br><a href="#t3">Задача C. Сумма</a>
+  <br><a href="#t4">Задача D. Сумма 2</a>
+  <br><a href="#t5">Задача E. Разреженные таблицы</a>
+  <br><a href="#t6">Задача F. Range Minimum Query</a>
 </article>
 
 
-<!-- Задача A. Выпуклая оболочка -->
+<!-- Задача A. Наивный RMQ -->
 <article class="article">
   <div class="anchor" id="t1"></div>
-  <h3>Задача A. Выпуклая оболочка</h3>
+  <h3>Задача A. Наивный RMQ</h3>
 
 </article>
