--- a/src/components/alg/alg-cf/spbgu/pages/elem-spbgu8.html
+++ b/src/components/alg/alg-cf/spbgu/pages/elem-spbgu8.html
@@ -4,8 +4,8 @@
 
 
 <article class="article">
-  <h1>8 2012-2013 C10 Строки</h1>
-  <p><a href="https://codeforces.com/group/U69t0Qb9kU/contest/100181" target="_blank">Codeforces Контест 100181</a></p>
+  <h1>8 2012-2013 B6 дерево отрезков 2 2012.10.06</h1>
+  <p><a href="https://codeforces.com/gym/100094" target="_blank">Codeforces Контест 100094</a></p>
 </article>
 
 
@@ -13,21 +13,17 @@
 <article class="article">
   <h2>Содержание</h2>
 
-      <a href="#t1">Задача A. Ненокку (простая)</a>
-  <br><a href="#t2">Задача B. Дана строка</a>
-  <br><a href="#t3">Задача C. Различные подстроки</a>
-  <br><a href="#t4">Задача D. Палиндромы</a>
-  <br><a href="#t5">Задача E. Подстроки-3</a>
-  <br><a href="#t6">Задача F. Сравнения подстрок</a>
-  <br><a href="#t7">Задача G. Преобразование строковых функций</a>
-  <br><a href="#t8">Задача H. Преобразование строковых функций: обратная задача</a>
-  <br><a href="#t9">Задача I. Циклические суффиксы</a>
+      <a href="#t1">Задача A. Это как пятый, но на один пониже</a>
+  <br><a href="#t2">Задача B. Грибы</a>
+  <br><a href="#t3">Задача C. Художник</a>
+  <br><a href="#t4">Задача D. Горы</a>
+  <br><a href="#t5">Задача E. Золотые рудники</a>
 </article>
 
 
-<!-- Задача A. Ненокку (простая) -->
+<!-- Задача A. Это как пятый, но на один пониже -->
 <article class="article">
   <div class="anchor" id="t1"></div>
-  <h3>Задача A. Ненокку (простая)</h3>
+  <h3>Задача A. Это как пятый, но на один пониже</h3>
 
 </article>
