--- a/src/components/alg/alg-cf/spbgu/pages/elem-spbgu9.html
+++ b/src/components/alg/alg-cf/spbgu/pages/elem-spbgu9.html
@@ -4,8 +4,8 @@
 
 
 <article class="article">
-  <h1>9 2012-2013 B1</h1>
-  <p><a href="https://codeforces.com/group/U69t0Qb9kU/contest/100070" target="_blank">Codeforces Контест 100070</a></p>
+  <h1>9 2012-2013 B7 Разминка</h1>
+  <p><a href="https://codeforces.com/gym/100097" target="_blank">Codeforces Контест 100097</a></p>
 </article>
 
 
@@ -13,23 +13,18 @@
 <article class="article">
   <h2>Содержание</h2>
 
-      <a href="#t1">Задача A. Сумма А + В</a>
-  <br><a href="#t2">Задача B. Топологическая сортировка</a>
-  <br><a href="#t3">Задача C. Правое вхождение</a>
-  <br><a href="#t4">Задача D. К-ый минимум</a>
-  <br><a href="#t5">Задача E. Неизбежность</a>
-  <br><a href="#t6">Задача F. Шифр Бэкона</a>
-  <br><a href="#t7">Задача H. Деки на 6-и мегабайтах</a>
-  <br><a href="#t8">Задача I. Разрезание графа</a>
-  <br><a href="#t9">Задача J. Range Minimum Query</a>
-  <br><a href="#t10">Задача K. Лесенка</a>
-  <br><a href="#t11">Задача L. Островные государства</a>
+      <a href="#t1">Задача A. Азбучный путь</a>
+  <br><a href="#t2">Задача B. Подсчёт последовательностей</a>
+  <br><a href="#t3">Задача C. Скинь монетку</a>
+  <br><a href="#t4">Задача D. Дорога после дождя</a>
+  <br><a href="#t5">Задача E. Магический квадрат</a>
+  <br><a href="#t6">Задача F. Просто Floyd</a>
 </article>
 
 
-<!-- Задача A. Сумма А + В -->
+<!-- Задача A. Азбучный путь -->
 <article class="article">
   <div class="anchor" id="t1"></div>
-  <h3>Задача A. Сумма А + В</h3>
+  <h3>Задача A. Азбучный путь</h3>
 
 </article>
