--- a/src/components/alg/alg-cf/yargu1/pages/elem-sp19.html
+++ b/src/components/alg/alg-cf/yargu1/pages/elem-sp19.html
@@ -1258,7 +1258,7 @@ int main() {
   </details>
 
   <details>
-    <summary>Решение не готово</summary>
+    <summary>Решение</summary>
 
     <div>
       <a href="https://codeforces.com/contest/292/problem/B" target="_blank">Задача 292B</a>
