--- a/src/components/alg/alg-cf/yargu2/pages/elem-sp25.html
+++ b/src/components/alg/alg-cf/yargu2/pages/elem-sp25.html
@@ -26,5 +26,43 @@
 <article class="article">
   <div class="anchor" id="p1"></div>
   <h3>Геометрия 2</h3>
+
+  <h4>Окружность</h4>
+  <p>Окружность чаще всего задают через координаты центра (x, y) и радиус r.</p>
+<pre>
+struct circle {
+  double x, y, r;
+};
+</pre>
+  <p>Окружность можно задать формулой</p>
+  <code>(x - a)² + (y - b)² = r²</code>
+
+  <p>Площадь круга</p>
+  <code>s = pi * r²</code>
+
+  <p>Длина окружности</p>
+  <code>p = 2 * pi * r</code>
+
+  <h4>Задача. Дана окружность и точка.</h4>
+  <p>Как определить находится ли точка внутри окружности. Подставим координаты точки в уравнение окружности и вычислим выражение (x - a)² + (y - b)². Если значение выражения больше r², то точка вне окружности. Если меньше, то внутри окружности.</p>
+  <p>Поскольку мы находимся в вещественных числах, то чтобы проверить находится ли точка на окружности, нужно выполнить сравнение с очень маленькой величиной.</p>
+  <code>|(x - a)² + (y - b)² - r²| &lt;= eps</code>
+
+  <h4>Задача. Дана окружность и прямая.</h4>
+  <p>Проверить сколько у них точек пересечения. Из центра окружности опустим высоту на прямую и сравним ее с радиусом. Если меньше радиуса то две точки пересечения. Если больше то нет точек пересечения.</p>
+  <p>Если есть точки пересечения, то найти их. Прямая задана нормальным уравнением прямой</p>
+  <p>Первый способ это решить систему из двух уравнений.</p>
+  <code>(x - a)² + (y - b)² = r²</code>
+  <code>A * x + B * x + C = 0</code>
+  <p>Второй способ. Рассмотрим треугольник AOB. где A и B это точки пересечения прямой и окружности, а O это центр окружности. Это равнобедренный треугольник со сторонами OA = OB = r. Из точки O опустим перпендикуляр на сторону AB в точку D. Получим высоту OD треугольника AOB. Прямая имеет вектор нормали (A,B).</p>
+
+  <h4>Задача. Даны две окружности.</h4>
+  <p>Для решения задач на поиск точек пересечения нужно проверить расстояние между центрами окружности и сравнить его с радиусами.</p>
+  <p>Первый способ это решить систему из двух уравнений, для первой и второй окружности.</p>
+  <p>Второй способ. Построим два треугольника с веришнами O1P1O2 и O1P2O2, где P1 и P2 это точки пересечения окружностей, а O1 и O2 их центры. В этих треугольниках мы знаем все три стороны. Поэтому можем найти любой угол.</p>
+
+  <h4>Трехмерные задачи. Дан шар и две точки на нем.</h4>
+  <p>Найти расстояние между точками, проходя по поверхности шара.</p>
+  <p>Нужно пересечь шар плоскостью, которая проходит через две данные точки и через центр шара. То есть плоскость сечения задается тремя точками. Пересечение шара плоскостью даст нам окружность. Тогда нам останется определить длину дуги от точки p1 до p2.</p>
 </article>
 
