--- a/src/components/alg/alg-cf/spbgu/pages/elem-spbgu5.html
+++ b/src/components/alg/alg-cf/spbgu/pages/elem-spbgu5.html
@@ -4,8 +4,8 @@
 
 
 <article class="article">
-  <h1>5 2012-2013 C7 Кратчайшие расстояния в графах</h1>
-  <p><a href="https://codeforces.com/group/U69t0Qb9kU/contest/100166" target="_blank">Codeforces Контест 100166</a></p>
+  <h1>5 2012-2013 B4 наименьший общий предок LCA</h1>
+  <p><a href="https://codeforces.com/gym/100091" target="_blank">Codeforces Контест 100091</a></p>
 </article>
 
 
@@ -13,19 +13,16 @@
 <article class="article">
   <h2>Содержание</h2>
 
-      <a href="#t1">Задача A. Флойд</a>
-  <br><a href="#t2">Задача B. Сумма расстояний</a>
-  <br><a href="#t3">Задача C. Лабиринт знаний</a>
-  <br><a href="#t4">Задача D. Path. Кратчайший путь</a>
-  <br><a href="#t5">Задача E. Диаметр графа</a>
-  <br><a href="#t6">Задача F. Дейкстра</a>
-  <br><a href="#t7">Задача G. Расстояние между вершинами</a>
+      <a href="#t1">Задача A. LCA Начало</a>
+  <br><a href="#t2">Задача B. LCA Продолжение</a>
+  <br><a href="#t3">Задача C. LCA Запрос минимума</a>
+  <br><a href="#t4">Задача D. Цветные волшебники</a>
 </article>
 
 
-<!-- Задача A. Флойд -->
+<!-- Задача A. LCA Начало -->
 <article class="article">
   <div class="anchor" id="t1"></div>
-  <h3>Задача A. Флойд</h3>
+  <h3>Задача A. LCA Начало</h3>
 
 </article>
