--- a/src/components/alg/alg-cf/spbgu/pages/elem-spbgu6.html
+++ b/src/components/alg/alg-cf/spbgu/pages/elem-spbgu6.html
@@ -4,8 +4,8 @@
 
 
 <article class="article">
-  <h1>6 2012-2013 C8 Геометрия. База</h1>
-  <p><a href="https://codeforces.com/group/U69t0Qb9kU/contest/100168" target="_blank">Codeforces Контест 100168</a></p>
+  <h1>6 2012-2013 C3 Язык C++</h1>
+  <p><a href="https://codeforces.com/gym/100092" target="_blank">Codeforces Контест 100092</a></p>
 </article>
 
 
@@ -13,32 +13,20 @@
 <article class="article">
   <h2>Содержание</h2>
 
-      <a href="#t1">Задача A. Полярный угол точки</a>
-  <br><a href="#t2">Задача B. Угол между векторами</a>
-  <br><a href="#t3">Задача C. Площадь многоугольника</a>
-  <br><a href="#t4">Задача D. Площадь треугольника</a>
-  <br><a href="#t5">Задача E. Биссектриса</a>
-  <br><a href="#t6">Задача F. Расстояние от точки до прямой</a>
-  <br><a href="#t7">Задача G. Расстояние от точки до прямой</a>
-  <br><a href="#t8">Задача H. Расстояние от точки до луча</a>
-  <br><a href="#t9">Задача I. Расстояние от точки до отрезка</a>
-  <br><a href="#t10">Задача J. Расстояние между отрезками</a>
-  <br><a href="#t11">Задача K. Пересечение двух прямых</a>
-  <br><a href="#t12">Задача L. Длина вектора</a>
-  <br><a href="#t13">Задача M. Уравнение прямой 1</a>
-  <br><a href="#t14">Задача N. Уравнение прямой 2</a>
-  <br><a href="#t15">Задача O. Параллельная прямая</a>
-  <br><a href="#t16">Задача P. Принадлежность точки прямой</a>
-  <br><a href="#t17">Задача Q. Принадлежность точки лучу</a>
-  <br><a href="#t18">Задача R. Принадлежность точки отрезку</a>
-  <br><a href="#t19">Задача S. Положение точек вне прямой</a>
-  <br><a href="#t20">Задача T. Расстояние между лучами</a>
+      <a href="#t1">Задача A. Сумма двух</a>
+  <br><a href="#t2">Задача B. Произведение двух</a>
+  <br><a href="#t3">Задача C. Сумма двух наоборот</a>
+  <br><a href="#t4">Задача D. Наибольший общий делитель</a>
+  <br><a href="#t5">Задача E. Число Фибоначчи</a>
+  <br><a href="#t6">Задача F. Скейтборд</a>
+  <br><a href="#t7">Задача G. Два числа</a>
+  <br><a href="#t8">Задача H. Симпозиум</a>
 </article>
 
 
-<!-- Задача A. Полярный угол точки -->
+<!-- Задача A. Сумма двух -->
 <article class="article">
   <div class="anchor" id="t1"></div>
-  <h3>Задача A. Полярный угол точки</h3>
+  <h3>Задача A. Сумма двух</h3>
 
 </article>
